# UniverNumericMethods

./: .gitignore  CMakeLists.txt  demonstration.h  main.c
numeric_integration/: integration.h
solving_nonlinear_equation/combined_method/: combined_method.h
solving_nonlinear_equation/dichotomy_method/: dichotomy_method.h
solving_nonlinear_equation/util/: util.h
